grafana/deploy/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata: 
  name: grafana 
  namespace: grafana
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec: 
  rules: 
    - host: cluster.minikube.internal
      http: 
        paths:
          - path: /grafana
            pathType: Prefix 
            backend: 
              service: 
                name: grafana 
                port: 
                  number: 3000
